# BhavAnuvad

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
src/bhav/asr/: transcribe.py
src/bhav/audio/: io.py
src/bhav/text/: normalize.py
tests/: conftest.py  test_audio_io.py  test_normalize.py  test_transcribe.py
